feat: initial configuration has been added

--- a/irs.API/irs.API.csproj
+++ b/irs.API/irs.API.csproj
@@ -7,14 +7,39 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <!-- Dependency Injection related packages -->
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
+        <!-- Entity Framework Core Database Persistence related packages -->
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
+        <!-- MySQL Database Persistence related packages -->
+        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2" />
+        <!-- Audit Trails related packages -->
+        <PackageReference Include="EntityFrameworkCore.CreatedUpdatedDate" Version="8.0.0" />
+        <!-- Naming convention conversion related packages -->
+        <PackageReference Include="Humanizer" Version="2.14.1" />
+        <!-- OpenAPI Documentation related packages -->
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0"/>
+        <!-- BCrypt Encryption related packages -->
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+        <!-- JSON Web Tokens related packages -->
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+      <Folder Include="Vendors\Application\Internal\CommandServices\" />
+      <Folder Include="Vendors\Application\Internal\QueryServices\" />
+      <Folder Include="Vendors\Domain\Repositories\" />
+      <Folder Include="Vendors\Domain\Services\" />
+      <Folder Include="Vendors\Infrastructure\Persistence\EFC\Repositories\" />
+      <Folder Include="Vendors\Interfaces\REST\Resources\" />
+      <Folder Include="Vendors\Interfaces\REST\Transform\" />
     </ItemGroup>
 
 </Project>
