--- a/irs.API/irs.API.csproj
+++ b/irs.API/irs.API.csproj
@@ -7,16 +7,13 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
-
     <ItemGroup>
         <!-- Dependency Injection related packages -->
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
         <!-- Entity Framework Core Database Persistence related packages -->
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.8" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
-        <!-- MySQL Database Persistence related packages -->
-        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2" />
         <!-- Audit Trails related packages -->
         <PackageReference Include="EntityFrameworkCore.CreatedUpdatedDate" Version="8.0.0" />
         <!-- Naming convention conversion related packages -->
@@ -30,16 +27,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6"/>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Vendors\Application\Internal\CommandServices\" />
-      <Folder Include="Vendors\Application\Internal\QueryServices\" />
-      <Folder Include="Vendors\Domain\Repositories\" />
-      <Folder Include="Vendors\Domain\Services\" />
-      <Folder Include="Vendors\Infrastructure\Persistence\EFC\Repositories\" />
-      <Folder Include="Vendors\Interfaces\REST\Resources\" />
-      <Folder Include="Vendors\Interfaces\REST\Transform\" />
+        <!-- SQL Server Database Persistence related packages -->
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     </ItemGroup>
 
 </Project>
