--- a/irs.API/appsettings.json
+++ b/irs.API/appsettings.json
@@ -3,8 +3,8 @@
     "Secret": "Place here your secret for token generation"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=probandopais;User Id=sa;Password=123;TrustServerCertificate=True;",
-    "ProdConnection": "Server=tcp:eyserver.database.windows.net,1433;Initial Catalog=SampleDatabase;Persist Security Info=False;User ID=paologuillen123Q;Password=lagranwea123Q;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost;Database=BaseDeDatosPruebaTecnica;User Id=sa;Password=123;TrustServerCertificate=True;",
+    "ProdConnection": "Server=tcp:servidor-prueba-tecnica.database.windows.net,1433;Initial Catalog=BaseDeDatosPruebaTecnica;Persist Security Info=False;User ID=pruebatecnicaey123Q;Password=pruebatecnica123Q;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
